overflow, draggable div fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -611,7 +611,7 @@ body {
   display: none;
   text-align: center;
   max-height: 550px;
-  overflow: auto;
+  overflow: hidden;
 }
 /* 
 .collapse {
